2004-12-20 Alain Magloire

	PR 81321
	* src/org/eclipse/cdt/launch/internal/CPropertyTester.java

2004-12-06 Mikhail Khodjaiants
	The last character is missing in the launch configuration name generated 
	from the binary file name.
	* src/org/eclipse/cdt/launch/ui/CMainTab.java

2004-11-17 David Inglis

	Change to use IBinaryObject instead of IBinayExecutable

	* src/org/eclipse/cdt/launch/AbstractCLaunchDelegate.java
	* src/org/eclipse/cdt/launch/internal/CoreFileLaunchDelegate.java
	* src/org/eclipse/cdt/launch/internal/LocalAttachLaunchDelegate.java
	* src/org/eclipse/cdt/launch/internal/LocalRunLaunchDelegate.java
	
2004-11-11 Alain Magloire
	Fix for PR 78441
	* src/org/eclipse/cdt/launch/internal/CPropertyTester.java
	* plugin.xml

2004-11-1  David Inglis
	Use status handlers to prompt for launch input (process id and core file).

	* plugin.xml
	* src/org/eclipse/cdt/launch/internal/CoreFileLaunchDelegate.java
	* src/org/eclipse/cdt/launch/internal/LocalAttachLaunchDelegate.java
	* src/org/eclipse/cdt/launch/internal/ui/CoreFilePrompter.java
	* src/org/eclipse/cdt/launch/internal/ui/ProcessPrompter.java
	
2004-11-01 David Inglis
	getEnvironmentAsProperty was not using new getEnviroment().
	
	* src/org/eclipse/cdt/launch/AbstractCLaunchDelegate.java
	
2004-10-22 David Inglis
	Added variables support to arguments, environment and working directory.

	* plugin.xml
	* src/org/eclipse/cdt/launch/AbstractCLaunchDelegate.java
	* src/org/eclipse/cdt/launch/internal/LocalRunLaunchDelegate.java
	* src/org/eclipse/cdt/launch/internal/ui/LaunchMessages.properties
	* src/org/eclipse/cdt/launch/internal/ui/LocalRunLaunchConfigurationTabGroup.java
	* src/org/eclipse/cdt/launch/internal/ui/WorkingDirectoryBlock.java
	* src/org/eclipse/cdt/launch/ui/CArgumentsTab.java
	* src/org/eclipse/cdt/launch/ui/CDebuggerTab.java
	* src/org/eclipse/cdt/launch/internal/ui/MigratingCEnvironmentTab.java
	
2004-10-18 Alain Magloire
	Adjust to changes in CDI